--- a/src/main/resources/config/gymapp-dev.yml
+++ b/src/main/resources/config/gymapp-dev.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/gymapp_rest
+    url: jdbc:postgresql://localhost:5432/gymapp_local_dev
     username: ${LOCAL_AND_DEV_USER}
     password: ${LOCAL_AND_DEV_USER_PASSWORD}
   jpa:
