--- a/src/main/resources/config/gymapp.yml
+++ b/src/main/resources/config/gymapp.yml
@@ -22,6 +22,13 @@ management:
       prometheus:
         enabled: true
 
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
+    register-with-eureka: true
+    fetch-registry: true
+
 server:
   port: 8082
 
