workload serivce configurations, circuit breaking configs

--- a/src/main/resources/config/gymapp.yml
+++ b/src/main/resources/config/gymapp.yml
@@ -13,10 +13,13 @@ management:
   endpoints:
     web:
       exposure:
-        include: health, info, metrics, env, prometheus, beans
+        include: "*"
   endpoint:
     health:
       show-details: always
+  health:
+    circuitbreakers:
+      enabled: true
   metrics:
     export:
       prometheus:
@@ -28,6 +31,19 @@ eureka:
       defaultZone: http://localhost:8761/eureka
     register-with-eureka: true
     fetch-registry: true
+
+resilience4j:
+  circuitbreaker:
+    instances:
+      workloadService:
+        registerHealthIndicator: true
+        slidingWindowSize: 10
+        minimumNumberOfCalls: 5
+        permittedNumberOfCallsInHalfOpenState: 3
+        waitDurationInOpenState: 10s
+        failureRateThreshold: 50
+        automaticTransitionFromOpenToHalfOpenEnabled: true
+        slidingWindowType: count_based
 
 server:
   port: 8082
