--- a/src/main/resources/config/gymapp.yml
+++ b/src/main/resources/config/gymapp.yml
@@ -4,6 +4,13 @@ spring:
     show-sql: true
     open-in-view: true
     database-platform: org.hibernate.dialect.PostgreSQLDialect
+  activemq:
+    broker-url: tcp://localhost:61616
+    user: admin
+    password: admin
+    in-memory: false
+    pool:
+      enabled: false
 
 jwt:
   expirationTime: 3600000
