--- a/src/main/resources/config/gymapp-workload-service.yml
+++ b/src/main/resources/config/gymapp-workload-service.yml
@@ -1,3 +1,13 @@
+spring:
+  activemq:
+    broker-url: tcp://localhost:61616
+    user: admin
+    password: admin
+    in-memory: false
+    pool:
+      enabled: false
+
+
 eureka:
   client:
     serviceUrl:
