added datasource in workload service's configuration file

--- a/src/main/resources/config/gymapp-workload-service.yml
+++ b/src/main/resources/config/gymapp-workload-service.yml
@@ -1,4 +1,8 @@
 spring:
+  data:
+    mongodb:
+      uri: mongodb://root:password111@localhost:27017/trainers_duration?authSource=admin
+      database: users
   activemq:
     broker-url: tcp://localhost:61616
     user: admin
